// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering should render valid snapshot with default props 1`] = `
<div
  className="multiple-value-text-input"
>
  <label
    className=""
    htmlFor="test-input"
  >
    <div
      className="multiple-value-text-input-item-container"
    />
    <input
      charCodes={
        Array [
          13,
          44,
        ]
      }
      className=""
      name="test-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      shouldAddOnBlur={false}
      type="text"
      value=""
      values={Array []}
    />
  </label>
</div>
`;

exports[`rendering should render valid snapshot with passed props 1`] = `
<div
  className="multiple-value-text-input"
>
  <label
    className=""
    htmlFor="test-input"
  >
    Test Label
    <div
      className="multiple-value-text-input-item-container"
    />
    <input
      charCodes={
        Array [
          13,
          44,
        ]
      }
      className=""
      name="test-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Test Placeholder"
      shouldAddOnBlur={false}
      type="text"
      value=""
      values={Array []}
    />
  </label>
</div>
`;
